[package]
name = "escpos-embed-image"
version = "0.1.0"
edition = "2021"
description = "Procedural macro for embedding monochrome, dithered images into ESC/POS printer drivers at compile time"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
image = "0.25"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
glob = "0.3"
heck = "0.4"
proc-macro2 = "1.0"

[dev-dependencies]
# To allow tests; we might not need, but for demonstration

